[tool.poetry]
name = "tracky"
version = "0.1.2"
description = "A minimal object tracking package"
authors = ["jbencook <ben@sparrow.dev>"]
license = "MIT"
packages = [
    { include = "tracky" }
]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
numpy = "^1.20"
scipy = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
